--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Titre de la page</title>
+    <title> Portfolio Baptiste Geraudie </title>
   </head>
   <body>
-    <!-- Contenu de la page -->
+    <!--Bonjour, je m'appelle Baptiste Geraudie. Je suis délégué de LP3 car je suis le plus beau de la classe-->
   </body>
 </html>
