--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+
 <html>
   <head>
     <title> Portfolio Baptiste Geraudie </title>
   </head>
   <body>
-    <!--Bonjour, je m'appelle Baptiste Geraudie. Je suis délégué de LP3 car je suis le plus beau de la classe-->
+    <h1>Portfolio Baptiste Geraudie<h1>
+     <h2>Présentation <h2>
+     <p1>jour je m'appelle Baptiste, je suis délégué de la Lp3 car je suis le plus beau de la classe.gp1>
   </body>
 </html>
