--- a/index.html
+++ b/index.html
@@ -1,11 +1,83 @@
 
-<html>
-  <head>
-    <title> Portfolio Baptiste Geraudie </title>
-  </head>
-  <body>
-    <h1>Portfolio Baptiste Geraudie<h1>
-     <h2>Présentation <h2>
-     <p1>jour je m'appelle Baptiste, je suis délégué de la Lp3 car je suis le plus beau de la classe.gp1>
-  </body>
+html
+Copier le code
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <div class="container">
+            <h1>Ton Nom</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">À propos</a></li>
+                    <li><a href="#projects">Projets</a></li>
+                    <li><a href="#skills">Compétences</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <section id="about" class="section">
+        <div class="container">
+            <h2>À propos</h2>
+            <p>Je suis [ta description ici]. Passionné(e) par [ton domaine], j'aime créer et résoudre des problèmes grâce à mes compétences en [ton expertise].</p>
+        </div>
+    </section>
+
+    <section id="projects" class="section">
+        <div class="container">
+            <h2>Projets</h2>
+            <div class="project">
+                <h3>Projet 1</h3>
+                <p>Description de ton projet.</p>
+            </div>
+            <div class="project">
+                <h3>Projet 2</h3>
+                <p>Description de ton projet.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="skills" class="section">
+        <div class="container">
+            <h2>Compétences</h2>
+            <ul>
+                <li>Compétence 1</li>
+                <li>Compétence 2</li>
+                <li>Compétence 3</li>
+            </ul>
+        </div>
+    </section>
+
+    <section id="contact" class="section">
+        <div class="container">
+            <h2>Contact</h2>
+            <form action="mailto:tonemail@example.com" method="post" enctype="text/plain">
+                <label for="name">Nom</label>
+                <input type="text" id="name" name="name" required>
+
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+
+                <label for="message">Message</label>
+                <textarea id="message" name="message" required></textarea>
+
+                <button type="submit">Envoyer</button>
+            </form>
+        </div>
+    </section>
+
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 Ton Nom. Tous droits réservés.</p>
+        </div>
+    </footer>
+</body>
 </html>
