--- a/index.html
+++ b/index.html
@@ -8,45 +8,38 @@
 </head>
 <body>
     <header>
-        <div class="container">
+        <div class="header-content">
             <img src="placeholder-photo.jpg" alt="Photo de Baptiste Geraudie" class="profile-photo">
             <h1>Baptiste Geraudie</h1>
-            <p>Futur Majeur de ma Promotion - Passionné de Golf</p>
-            <nav>
-                <ul>
-                    <li><a href="#about">À propos</a></li>
-                    <li><a href="#projects">Projets</a></li>
-                    <li><a href="#skills">Compétences</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
+            <p>Futur Majeur de ma Promotion | Passionné de Golf</p>
+            <a href="#about" class="btn">Découvrir</a>
         </div>
     </header>
 
     <section id="about" class="section">
-        <h2>À propos</h2>
-        <p>Étudiant dynamique et passionné, je vise l’excellence en combinant stratégie et leadership pour devenir le majeur de ma promotion. Avec une passion inégalée pour le golf, j'ai su transposer les valeurs de ce sport - précision, persévérance et esprit d'équipe - dans mes projets académiques et professionnels.</p>
+        <h2>À propos de moi</h2>
+        <p>Passionné par le sport et l'événementiel, je vise à devenir le majeur de ma promotion en alliant professionnalisme et créativité. Le golf m’a appris à persévérer, anticiper et viser juste, des valeurs que j’applique dans chaque projet.</p>
     </section>
 
     <section id="projects" class="section">
         <h2>Projets Réalisés</h2>
         <div class="project">
             <h3>Organisation du Black Friday 2024</h3>
-            <p>Gestion complète du Black Friday au Golf Bluegreen de Bellefontaine, combinant stratégie marketing et expérience client.</p>
+            <p>Gestion complète de l'événement au Golf Bluegreen de Bellefontaine, créant des expériences uniques pour les clients et partenaires.</p>
         </div>
         <div class="project">
             <h3>Plan Marketing Koezio Cergy 2025</h3>
-            <p>Création d'une campagne de communication innovante pour renforcer les relations B2B dans un cadre de team building.</p>
+            <p>Développement d'une campagne marketing innovante pour promouvoir les activités de team building.</p>
         </div>
     </section>
 
     <section id="skills" class="section">
         <h2>Compétences</h2>
         <ul>
-            <li>Leadership et Gestion de projet</li>
+            <li>Leadership & Gestion de projet</li>
             <li>Marketing stratégique et opérationnel</li>
             <li>Organisation d'événements sportifs</li>
-            <li>Esprit d'équipe et communication</li>
+            <li>Communication & Travail en équipe</li>
         </ul>
     </section>
 
@@ -67,7 +60,7 @@
     </section>
 
     <footer>
-        <p>Portfolio de Baptiste Geraudie - © 2024</p>
+        <p>&copy; 2024 Portfolio de Baptiste Geraudie</p>
     </footer>
 </body>
 </html>
