--- a/index.html
+++ b/index.html
@@ -1,66 +1,180 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio de Baptiste Geraudie</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Portfolio de Baptiste Geraudie</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <header>
-        <div class="header-content">
-            <img src="placeholder-photo.jpg" alt="Photo de Baptiste Geraudie" class="profile-photo">
-            <h1>Baptiste Geraudie</h1>
-            <p>Futur Majeur de ma Promotion | Passionné de Golf</p>
-            <a href="#about" class="btn">Découvrir</a>
-        </div>
-    </header>
+  <header>
+    <div class="header-container">
+      <div class="header-title">
+        <h1>Portfolio de Baptiste Geraudie</h1>
+        <p>Gestion du sport et passion pour la performance</p>
+      </div>
+      <div class="hero">
+        <img src="GERAUDIE Baptiste.jpg" alt="Photo de Baptiste Geraudie" class="profile-img">
+      </div>
+      <div class="contact-info">
+        <p><span>📞</span> 07-77-77-48-05 | <span>✉️</span> baptiste.geraudie@orange.fr</p>
+        <a href="6A4E79E8-F95E-414D-B8A4-AD352D636E84.pdf" class="btn" download>Télécharger mon CV</a>
+      </div>
+    </div>
+  </header>
 
-    <section id="about" class="section">
+  <nav>
+    <ul class="navigation">
+      <li><a href="#introduction">Introduction</a></li>
+      <li><a href="#a-propos">À propos</a></li>
+      <li><a href="#formation-academique">Formation</a></li>
+      <li><a href="#formation-professionnelle">Expériences</a></li>
+      <li><a href="#competences">Compétences</a></li>
+      <li><a href="#projets">Projets</a></li>
+      <li><a href="#objectifs-carriere">Objectifs de carrière</a></li>
+      <li><a href="#activites-passions">Passions</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <main>
+    <section id="introduction">
+      <div class="content">
+        <h2>Introduction</h2>
+        <p>Passionné par le sport, je mets mes compétences au service des structures sportives pour optimiser la gestion et l’expérience des utilisateurs. Ma vision est de combiner performance, bien-être et innovation au sein de l'industrie du sport.</p>
+      </div>
+    </section>
+
+    <section id="a-propos">
+      <div class="content">
         <h2>À propos de moi</h2>
-        <p>Passionné par le sport et l'événementiel, je vise à devenir le majeur de ma promotion en alliant professionnalisme et créativité. Le golf m’a appris à persévérer, anticiper et viser juste, des valeurs que j’applique dans chaque projet.</p>
+        <p>Né le 4 janvier 2003, dynamique et passionné par l’innovation dans le sport, je combine une bonne gestion, des compétences en communication et un fort esprit d’équipe. J'aspire à intégrer un master en management du sport pour approfondir mes connaissances et participer à des projets ambitieux dans le domaine sportif.</p>
+      </div>
     </section>
 
-    <section id="projects" class="section">
-        <h2>Projets Réalisés</h2>
-        <div class="project">
-            <h3>Organisation du Black Friday 2024</h3>
-            <p>Gestion complète de l'événement au Golf Bluegreen de Bellefontaine, créant des expériences uniques pour les clients et partenaires.</p>
-        </div>
-        <div class="project">
-            <h3>Plan Marketing Koezio Cergy 2025</h3>
-            <p>Développement d'une campagne marketing innovante pour promouvoir les activités de team building.</p>
-        </div>
-    </section>
-
-    <section id="skills" class="section">
-        <h2>Compétences</h2>
+    <section id="formation-academique">
+      <div class="content">
+        <h2>Formation académique</h2>
         <ul>
-            <li>Leadership & Gestion de projet</li>
-            <li>Marketing stratégique et opérationnel</li>
-            <li>Organisation d'événements sportifs</li>
-            <li>Communication & Travail en équipe</li>
+          <li><strong>Licence Pro Commerce et Service Sportif</strong> (2022-2023), ILEPS, Cergy</li>
+          <li><strong>Licence Gestion accès santé</strong> (2021-2022), Université Polytechnique Haut de France</li>
+          <li><strong>Baccalauréat</strong>, Lycée Jean Perrin, Saint-Ouen l’Aumône</li>
         </ul>
+      </div>
     </section>
 
-    <section id="contact" class="section">
+    <section id="formation-professionnelle">
+      <div class="content">
+        <h2>Expériences professionnelles</h2>
+        <div class="job">
+          <h3>Golf Bluegreen de Bellefontaine</h3>
+          <p><strong>Lieu :</strong> Bellefontaine | <em>Avril 2023 - Juin 2023</em></p>
+          <ul>
+            <li>Accueillir et conseiller le client</li>
+            <li>Organisation du Proshop</li>
+            <li>Création et gestion d'événements</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <h3>The North Face, Paris</h3>
+          <p><strong>Lieu :</strong> Paris | <em>Décembre 2022 - Janvier 2023</em></p>
+          <ul>
+            <li>Mise en rayon et gestion du stock</li>
+            <li>Conseil client et accueil international</li>
+          </ul>
+        </div>
+
+        <div class="job">
+          <h3>Paddle Brother, L'Isle Adam</h3>
+          <p><strong>Lieu :</strong> L'Isle Adam | <em>Mai 2022 - Octobre 2022</em></p>
+          <ul>
+            <li>Accueil client et explication des parcours</li>
+            <li>Organisation et gestion des équipements</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="competences">
+      <div class="content">
+        <h2>Compétences</h2>
+        <div class="competence-section">
+          <h3>Compétences techniques</h3>
+          <ul>
+            <li>Marketing sportif</li>
+            <li>Gestion de contenus numériques</li>
+            <li>Maîtrise des outils bureautiques (Excel, Word, PowerPoint)</li>
+            <li>Gestion d'événements sportifs</li>
+          </ul>
+        </div>
+
+        <div class="competence-section">
+          <h3>Langues</h3>
+          <ul>
+            <li>Français : Langue maternelle</li>
+            <li>Anglais : B1</li>
+            <li>Espagnol : B1</li>
+          </ul>
+        </div>
+
+        <div class="competence-section">
+          <h3>Soft Skills</h3>
+          <ul>
+            <li>Leadership</li>
+            <li>Travail en équipe</li>
+            <li>Gestion du stress</li>
+            <li>Créativité et résolution de problèmes</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <section id="projets">
+      <div class="content">
+        <h2>Projets réalisés</h2>
+        <div class="project">
+          <h3>Gestion d'un événement sportif à l'ILEPS</h3>
+          <p>J'ai organisé un événement sportif en collaboration avec plusieurs partenaires locaux, visant à promouvoir le sport auprès des jeunes. Mon rôle était de coordonner les équipes, gérer les inscriptions et veiller à la réussite de l'événement.</p>
+        </div>
+        <div class="project">
+          <h3>Création d'un plan marketing pour un club sportif</h3>
+          <p>Dans le cadre de mon cursus, j'ai conçu un plan marketing pour un club de handball local. Ce projet a permis de dynamiser la communication du club et d'attirer de nouveaux membres.</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="objectifs-carriere">
+      <div class="content">
+        <h2>Objectifs de carrière</h2>
+        <p>Mon objectif est de suivre un master en management du sport pour approfondir mes compétences en gestion d'événements et marketing sportif. À long terme, j'aspire à travailler pour une fédération sportive ou un grand club, où je pourrai mettre à profit ma passion et mes compétences pour contribuer à leur développement.</p>
+      </div>
+    </section>
+
+    <section id="activites-passions">
+      <div class="content">
+        <h2>Passions</h2>
+        <ul>
+          <li><strong>Sports :</strong> Handball, Escalade, Musculation</li>
+          <li><strong>Voyages :</strong> Croatie, Grêce, Angleterre, Ecosse, Italie...</li>
+          <li><strong>Bénévolat :</strong>Arbitre de Handball</li>
+        </ul>
+      </div>
+    </section>
+
+    <section id="contact">
+      <div class="content">
         <h2>Contact</h2>
-        <form>
-            <label for="name">Nom :</label>
-            <input type="text" id="name" name="name" placeholder="Votre nom">
-            
-            <label for="email">Email :</label>
-            <input type="email" id="email" name="email" placeholder="Votre email">
-
-            <label for="message">Message :</label>
-            <textarea id="message" name="message" placeholder="Votre message"></textarea>
-
-            <button type="submit">Envoyer</button>
-        </form>
+        <p>📞 07-77-77-48-05 | ✉️ baptiste.geraudie@orange.fr</p>
+      </div>
     </section>
+  </main>
 
-    <footer>
-        <p>&copy; 2024 Portfolio de Baptiste Geraudie</p>
-    </footer>
+  <footer>
+    <p>© 2024 Baptiste Geraudie</p>
+  </footer>
 </body>
+
 </html>
