--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Baptiste Geraudie</title>
+  <meta name="description" content="Portfolio de Baptiste Geraudie, spécialisé en gestion du sport, marketing sportif et organisation d'événements.">
+  <meta name="author" content="Baptiste Geraudie">
+  <meta name="keywords" content="Baptiste Geraudie, sport, management, portfolio, marketing, événementiel">
+  <title>Portfolio de Baptiste Geraudie</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -15,11 +18,12 @@
         <h1>Portfolio de Baptiste Geraudie</h1>
         <p>Gestion du sport et passion pour la performance</p>
       </div>
-      <div class="hero">
-        <img src="GERAUDIE Baptiste.jpg" alt="Photo de Baptiste Geraudie" class="profile-img">
-      </div>
+      <figure class="hero">
+        <img src="GERAUDIE Baptiste.jpg" alt="Portrait de Baptiste Geraudie" class="profile-img">
+      </figure>
       <div class="contact-info">
-        <p><span>📞</span> 07-77-77-48-05 | <span>✉️</span> baptiste.geraudie@orange.fr</p>
+        <p><span aria-hidden="true">📞</span> <a href="tel:0777774805">07-77-77-48-05</a> | 
+           <span aria-hidden="true">✉️</span> <a href="mailto:baptiste.geraudie@orange.fr">baptiste.geraudie@orange.fr</a></p>
         <a href="6A4E79E8-F95E-414D-B8A4-AD352D636E84.pdf" class="btn" download>Télécharger mon CV</a>
       </div>
     </div>
@@ -33,28 +37,28 @@
       <li><a href="#formation-professionnelle">Expériences</a></li>
       <li><a href="#competences">Compétences</a></li>
       <li><a href="#projets">Projets</a></li>
-      <li><a href="#objectifs-carriere">Objectifs de carrière</a></li>
+      <li><a href="#objectifs-carriere">Objectifs</a></li>
       <li><a href="#activites-passions">Passions</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
   <main>
-    <section id="introduction">
+    <section id="introduction" class="section">
       <div class="content">
         <h2>Introduction</h2>
         <p>Passionné par le sport, je mets mes compétences au service des structures sportives pour optimiser la gestion et l’expérience des utilisateurs. Ma vision est de combiner performance, bien-être et innovation au sein de l'industrie du sport.</p>
       </div>
     </section>
 
-    <section id="a-propos">
+    <section id="a-propos" class="section">
       <div class="content">
         <h2>À propos de moi</h2>
         <p>Né le 4 janvier 2003, dynamique et passionné par l’innovation dans le sport, je combine une bonne gestion, des compétences en communication et un fort esprit d’équipe. J'aspire à intégrer un master en management du sport pour approfondir mes connaissances et participer à des projets ambitieux dans le domaine sportif.</p>
       </div>
     </section>
 
-    <section id="formation-academique">
+    <section id="formation-academique" class="section">
       <div class="content">
         <h2>Formation académique</h2>
         <ul>
@@ -65,10 +69,10 @@
       </div>
     </section>
 
-    <section id="formation-professionnelle">
+    <section id="formation-professionnelle" class="section">
       <div class="content">
         <h2>Expériences professionnelles</h2>
-        <div class="job">
+        <article class="job">
           <h3>Golf Bluegreen de Bellefontaine</h3>
           <p><strong>Lieu :</strong> Bellefontaine | <em>Avril 2023 - Juin 2023</em></p>
           <ul>
@@ -76,29 +80,29 @@
             <li>Organisation du Proshop</li>
             <li>Création et gestion d'événements</li>
           </ul>
-        </div>
+        </article>
 
-        <div class="job">
+        <article class="job">
           <h3>The North Face, Paris</h3>
           <p><strong>Lieu :</strong> Paris | <em>Décembre 2022 - Janvier 2023</em></p>
           <ul>
             <li>Mise en rayon et gestion du stock</li>
             <li>Conseil client et accueil international</li>
           </ul>
-        </div>
+        </article>
 
-        <div class="job">
+        <article class="job">
           <h3>Paddle Brother, L'Isle Adam</h3>
           <p><strong>Lieu :</strong> L'Isle Adam | <em>Mai 2022 - Octobre 2022</em></p>
           <ul>
             <li>Accueil client et explication des parcours</li>
             <li>Organisation et gestion des équipements</li>
           </ul>
-        </div>
+        </article>
       </div>
     </section>
 
-    <section id="competences">
+    <section id="competences" class="section">
       <div class="content">
         <h2>Compétences</h2>
         <div class="competence-section">
@@ -132,42 +136,43 @@
       </div>
     </section>
 
-    <section id="projets">
+    <section id="projets" class="section">
       <div class="content">
         <h2>Projets réalisés</h2>
-        <div class="project">
+        <article class="project">
           <h3>Gestion d'un événement sportif à l'ILEPS</h3>
           <p>J'ai organisé un événement sportif en collaboration avec plusieurs partenaires locaux, visant à promouvoir le sport auprès des jeunes. Mon rôle était de coordonner les équipes, gérer les inscriptions et veiller à la réussite de l'événement.</p>
-        </div>
-        <div class="project">
+        </article>
+        <article class="project">
           <h3>Création d'un plan marketing pour un club sportif</h3>
           <p>Dans le cadre de mon cursus, j'ai conçu un plan marketing pour un club de handball local. Ce projet a permis de dynamiser la communication du club et d'attirer de nouveaux membres.</p>
-        </div>
+        </article>
       </div>
     </section>
 
-    <section id="objectifs-carriere">
+    <section id="objectifs-carriere" class="section">
       <div class="content">
         <h2>Objectifs de carrière</h2>
         <p>Mon objectif est de suivre un master en management du sport pour approfondir mes compétences en gestion d'événements et marketing sportif. À long terme, j'aspire à travailler pour une fédération sportive ou un grand club, où je pourrai mettre à profit ma passion et mes compétences pour contribuer à leur développement.</p>
       </div>
     </section>
 
-    <section id="activites-passions">
+    <section id="activites-passions" class="section">
       <div class="content">
         <h2>Passions</h2>
         <ul>
           <li><strong>Sports :</strong> Handball, Escalade, Musculation</li>
-          <li><strong>Voyages :</strong> Croatie, Grêce, Angleterre, Ecosse, Italie...</li>
-          <li><strong>Bénévolat :</strong>Arbitre de Handball</li>
+          <li><strong>Voyages :</strong> Croatie, Grèce, Angleterre, Écosse, Italie...</li>
+          <li><strong>Bénévolat :</strong> Arbitre de Handball</li>
         </ul>
       </div>
     </section>
 
-    <section id="contact">
+    <section id="contact" class="section">
       <div class="content">
         <h2>Contact</h2>
-        <p>📞 07-77-77-48-05 | ✉️ baptiste.geraudie@orange.fr</p>
+        <p><span aria-hidden="true">📞</span> <a href="tel:0777774805">07-77-77-48-05</a> | 
+           <span aria-hidden="true">✉️</span> <a href="mailto:baptiste.geraudie@orange.fr">baptiste.geraudie@orange.fr</a></p>
       </div>
     </section>
   </main>
