--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Portfolio de Baptiste Geraudie, spécialisé en gestion du sport, marketing sportif et organisation d'événements.">
   <meta name="author" content="Baptiste Geraudie">
   <meta name="keywords" content="Baptiste Geraudie, sport, management, portfolio, marketing, événementiel">
-  <title>Portfolio de Baptiste Geraudie</title>
+  <title>Baptiste Geraudie</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -15,7 +15,7 @@
   <header>
     <div class="header-container">
       <div class="header-title">
-        <h1>Portfolio de Baptiste Geraudie</h1>
+        <h1>Baptiste Geraudie</h1>
         <p>Gestion du sport et passion pour la performance</p>
       </div>
       <figure class="hero">
