--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Baptiste Geraudie">
   <meta name="keywords" content="Baptiste Geraudie, sport, management, portfolio, marketing, événementiel">
   <title>Baptiste Geraudie</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
