--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Gestion du sport et passion pour la performance</p>
       </div>
       <figure class="hero">
-        <img src="GERAUDIE_Baptiste.jpg" alt="Portrait de Baptiste Geraudie" class="profile-img">
+        <img src="GERAUDIE Baptiste.jpeg" alt="Portrait de Baptiste Geraudie" class="profile-img">
       </figure>
       <div class="contact-info">
         <p><span aria-hidden="true">📞</span> <a href="tel:0777774805">07-77-77-48-05</a> | 
