--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     </div>
   </header>
 
+  <!-- Navigation -->
   <nav>
     <ul class="navigation">
       <li><a href="#introduction">Introduction</a></li>
@@ -44,6 +45,8 @@
   </nav>
 
   <main>
+
+      <main>
     <section id="introduction" class="section">
       <div class="content">
         <h2>Introduction</h2>
@@ -68,75 +71,84 @@
         </ul>
       </div>
     </section>
-
+        
     <section id="formation-professionnelle" class="section">
       <div class="content">
         <h2>Expériences professionnelles</h2>
-        <article class="job">
+        
+        <!-- Job 1 -->
+        <div class="job">
           <h3>Golf Bluegreen de Bellefontaine</h3>
           <p><strong>Lieu :</strong> Bellefontaine | <em>Avril 2023 - Juin 2023</em></p>
           <ul>
-            <li>Accueillir et conseiller le client</li>
-            <li>Organisation du Proshop</li>
-            <li>Création et gestion d'événements</li>
-          </ul>
-        </article>
-
-        <article class="job">
-          <h3>The North Face, Paris</h3>
-          <p><strong>Lieu :</strong> Paris | <em>Décembre 2022 - Janvier 2023</em></p>
-          <ul>
-            <li>Mise en rayon et gestion du stock</li>
-            <li>Conseil client et accueil international</li>
-          </ul>
-        </article>
-
-        <article class="job">
-          <h3>Paddle Brother, L'Isle Adam</h3>
-          <p><strong>Lieu :</strong> L'Isle Adam | <em>Mai 2022 - Octobre 2022</em></p>
-          <ul>
-            <li>Accueil client et explication des parcours</li>
-            <li>Organisation et gestion des équipements</li>
-          </ul>
-        </article>
-      </div>
-    </section>
-
-    <section id="competences" class="section">
-      <div class="content">
-        <h2>Compétences</h2>
-        <div class="competence-section">
-          <h3>Compétences techniques</h3>
-          <ul>
-            <li>Marketing sportif</li>
-            <li>Gestion de contenus numériques</li>
-            <li>Maîtrise des outils bureautiques (Excel, Word, PowerPoint)</li>
-            <li>Gestion d'événements sportifs</li>
+            <li>Accueillir et conseiller les clients sur les services proposés</li>
+            <li>Organiser et gérer l’espace Proshop</li>
+            <li>Coordonner la création et la gestion des événements sur le terrain</li>
           </ul>
         </div>
 
+        <!-- Job 2 -->
+        <div class="job">
+          <h3>The North Face, Paris</h3>
+          <p><strong>Lieu :</strong> Paris | <em>Décembre 2022 - Janvier 2023</em></p>
+          <ul>
+            <li>Gestion du stock et mise en rayon des produits</li>
+            <li>Conseil client personnalisé et gestion des demandes internationales</li>
+          </ul>
+        </div>
+
+        <!-- Job 3 -->
+        <div class="job">
+          <h3>Paddle Brother, L'Isle Adam</h3>
+          <p><strong>Lieu :</strong> L'Isle Adam | <em>Mai 2022 - Octobre 2022</em></p>
+          <ul>
+            <li>Accueillir les clients et leur fournir des informations sur les parcours de paddle</li>
+            <li>Gérer la réservation et le prêt des équipements sportifs</li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <!-- Compétences -->
+    <section id="competences" class="section">
+      <div class="content">
+        <h2>Compétences</h2>
+
+        <!-- Compétences techniques -->
+        <div class="competence-section">
+          <h3>Compétences techniques</h3>
+          <ul>
+            <li>Marketing sportif et stratégie de communication</li>
+            <li>Gestion des événements sportifs et des partenariats</li>
+            <li>Utilisation avancée des outils bureautiques : Excel, Word, PowerPoint</li>
+            <li>Gestion de contenu numérique et stratégie sur les réseaux sociaux</li>
+          </ul>
+        </div>
+
+        <!-- Langues -->
         <div class="competence-section">
           <h3>Langues</h3>
           <ul>
             <li>Français : Langue maternelle</li>
-            <li>Anglais : B1</li>
-            <li>Espagnol : B1</li>
+            <li>Anglais : Niveau B1 (intermédiaire)</li>
+            <li>Espagnol : Niveau B1 (intermédiaire)</li>
           </ul>
         </div>
 
+        <!-- Soft Skills -->
         <div class="competence-section">
-          <h3>Soft Skills</h3>
+          <h3>Compétences interpersonnelles (Soft Skills)</h3>
           <ul>
-            <li>Leadership</li>
-            <li>Travail en équipe</li>
-            <li>Gestion du stress</li>
-            <li>Créativité et résolution de problèmes</li>
+            <li>Capacité de leadership et prise d'initiative</li>
+            <li>Travail en équipe et gestion de groupe</li>
+            <li>Résolution de problèmes et prise de décision rapide</li>
+            <li>Gestion du stress et esprit d'analyse</li>
           </ul>
         </div>
       </div>
     </section>
 
-    <section id="projets" class="section">
+        <section id="projets" class="section">
       <div class="content">
         <h2>Projets réalisés</h2>
         <article class="project">
@@ -175,6 +187,15 @@
            <span aria-hidden="true">✉️</span> <a href="mailto:baptiste.geraudie@orange.fr">baptiste.geraudie@orange.fr</a></p>
       </div>
     </section>
+  </main>
+
+  <footer>
+    <p>© 2024 Baptiste Geraudie</p>
+  </footer>
+</body>
+
+</html>
+
   </main>
 
   <footer>
