--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <div class="contact-info">
         <p><span aria-hidden="true">📞</span> <a href="tel:0777774805">07-77-77-48-05</a> | 
            <span aria-hidden="true">✉️</span> <a href="mailto:baptiste.geraudie@orange.fr">baptiste.geraudie@orange.fr</a></p>
-        <a href="6A4E79E8-F95E-414D-B8A4-AD352D636E84.pdf" class="btn" download>Télécharger mon CV</a>
+        <a href="IMG_1002.jpeg" class="btn" download>Télécharger mon CV</a>
       </div>
     </div>
   </header>
