--- a/index.html
+++ b/index.html
@@ -45,8 +45,6 @@
   </nav>
 
   <main>
-
-      <main>
     <section id="introduction" class="section">
       <div class="content">
         <h2>Introduction</h2>
@@ -71,19 +69,19 @@
         </ul>
       </div>
     </section>
-        
+
     <section id="formation-professionnelle" class="section">
       <div class="content">
         <h2>Expériences professionnelles</h2>
-        
+
         <!-- Job 1 -->
         <div class="job">
           <h3>Golf Bluegreen de Bellefontaine</h3>
-          <p><strong>Lieu :</strong> Bellefontaine | <em>Avril 2023 - Juin 2023</em></p>
+          <p><strong>Lieu :</strong> Bellefontaine | <em>Septembre 2023 - Aujourd'hui</em></p>
           <ul>
-            <li>Accueillir et conseiller les clients sur les services proposés</li>
-            <li>Organiser et gérer l’espace Proshop</li>
-            <li>Coordonner la création et la gestion des événements sur le terrain</li>
+            <li>Accueil et conseil client</li>
+            <li>Gestion de l'accueil et de la boutique</li>
+            <li>Organisation d'événements</li>
           </ul>
         </div>
 
@@ -109,7 +107,6 @@
       </div>
     </section>
 
-    <!-- Compétences -->
     <section id="competences" class="section">
       <div class="content">
         <h2>Compétences</h2>
@@ -148,7 +145,7 @@
       </div>
     </section>
 
-        <section id="projets" class="section">
+    <section id="projets" class="section">
       <div class="content">
         <h2>Projets réalisés</h2>
         <article class="project">
@@ -187,15 +184,6 @@
            <span aria-hidden="true">✉️</span> <a href="mailto:baptiste.geraudie@orange.fr">baptiste.geraudie@orange.fr</a></p>
       </div>
     </section>
-  </main>
-
-  <footer>
-    <p>© 2024 Baptiste Geraudie</p>
-  </footer>
-</body>
-
-</html>
-
   </main>
 
   <footer>
